--- a/layouts/partials/tag.html
+++ b/layouts/partials/tag.html
@@ -1,2 +1,1 @@
-{{- /*<!-- layouts/partials/tag.html -->*/ -}}
-<a href="{{ .Permalink }}" class="tag" rel="tag" data-count="">{{ if (i18n .Title ) }}{{ (i18n .Title ) }}{{ else }}{{ .Title }}{{ end }}</a>
+<a href="{{ .Permalink }}" class="tag" rel="tag" data-count="" {{ if not (in (i18n "lang") "[i18n]") }}lang="{{ i18n "lang" }}"{{ end }}>{{ if not (in (i18n .Title) "[i18n]" ) }}{{ (i18n .Title) }}{{ else }}{{ .Title }}{{ end }}</a>
