--- a/layouts/partials/header-inner.html
+++ b/layouts/partials/header-inner.html
@@ -9,3 +9,4 @@
 	{{- with site.Params.Description }}<span class="description">{{ . }}</span>{{ end -}}
 </h1>
 {{ partialCached "menu-main" . }}
+{{ partialCached "search" . }}
