replace scroller character

--- a/layouts/partials/gadgets.html
+++ b/layouts/partials/gadgets.html
@@ -2,5 +2,5 @@
 <!-- 	{{ with .NextInSection }}<a id="next" class="icon" title="{{ i18n "next" }}: {{ .Title }}" href="{{ .Permalink }}">→</a>{{ end }}
 	{{ with .PrevInSection }}<a id="prev" class="icon" title="{{ i18n "previous" }}: {{ .Title }}" href="{{ .Permalink }}">←</a>{{ end }} -->
 	<a id="themer" class="icon hidden" href="#"><span></span></a>
-	<a id="scroller" class="icon" href="#top"><span>↑</span></a>
+	<a id="scroller" class="icon" href="#top"><span>⊼</span></a>
 </div>
