--- a/layouts/partials/social.html
+++ b/layouts/partials/social.html
@@ -1,5 +1,5 @@
 <nav class="social">
 	{{- range .Site.Params.Social -}}
-	<a href="{{ .link }}" rel="me noopener" class="icon-{{ .name }}" title="{{ .name }}" target="_blank"><span>{{ .name }}</span></a>
+	<a href="{{ .link }}" rel="me noopener" class="icon icon-{{ .name }}" title="{{ .name }}" target="_blank"><span>{{ .name }}</span></a>
 	{{- end }}
 </nav>
